# MetaWear-SDK-Cpp

./: .gitignore  CMakeLists.txt  Doxyfile  Jenkinsfile  LICENSE.md  Makefile  MetaWear.Win32.vcxproj  MetaWear.WinRT.vcxproj  README.md  buildall.bat  config.mk  metawear_src.tar  project_version.mk
bindings/javascript/: cbindings.js
bindings/python/mbientlab/metawear/: cbindings.py
bindings/swift/: cbindings.swift
c-binding-generator/: Makefile  README.md  config.mk  header.hpp
c-binding-generator/src/cbinds/: CHeaderFile.h  Constant.h  Enum.h  Function.h  FunctionPointer.h  Generator.h  Struct.h  Type.h  Util.h  Variable.h
c-binding-generator/src/cbinds/cpp/: Arguments.cpp  Arguments.h  Builder.cpp  Builder.h  CHeaderFile.cpp  CliBuilder.cpp  CliBuilder.h  CliOptionException.cpp  CliOptionException.h  Constant.cpp  DummyGenerator.cpp  DummyGenerator.h  Enum.cpp  Function.cpp  FunctionPointer.cpp  Option.cpp  Option.h  Struct.cpp  Type.cpp  Util.cpp  Variable.cpp  cli.h  main.cpp
cmake/: ReadVariables.cmake
cppdocs/: Makefile
cppdocs/source/: accelerometer.rst  advanced_features.rst  ambientlightsensor.rst  barometer.rst  btlecommunication.rst  colordetector.rst  conf.py  core_modules.rst  dataprocessor.rst  gpio.rst  gyro.rst  haptic.rst  humidity.rst  i2c.rst  ibeacon.rst  index.rst  led.rst  logging.rst  macro.rst  magnetometer.rst  mblmwdataprocessor.rst  mblmwdatasignal.rst  mblmwevent.rst  mblmwlogger.rst  mblmwmetawearboard.rst  neopixel.rst  peripherals.rst  proximitydetector.rst  sensor_fusion.rst  sensors.rst  settings.rst  spi.rst  temperature.rst  timer.rst
src/: module.modulemap
src/core/cpp/: config.mk
src/metawear/: accelerometer_bmi160.h  accelerometer_mma8452q.h  ambientlight_ltr329.h  barometer_bmp280.h  connection.h  data.h  dataprocessor.h  datasignal.h  datasignal_fwd.h  debug.h  gyro_bmi160.h  haptic.h  ibeacon.h  led.h  metawearboard.h  metawearboard_fwd.h  neopixel.h  sensor.h  sensor_defs.h  status.h  switch.h  types.h
src/metawear/core/: anonymous_datasignal.h  anonymous_datasignal_fwd.h  callback.h  connection.h  data.h  dataprocessor_fwd.h  datasignal.h  datasignal_fwd.h  debug.h  dllmarker.h  event.h  event_fwd.h  logging.h  logging_fwd.h  macro.h  metawearboard.h  metawearboard_fwd.h  model.h  module.h  settings.h  status.h  timer.h  timer_fwd.h  types.h
src/metawear/core/cpp/: anonymous_datasignal.cpp  anonymous_datasignal_private.h  connection.cpp  connection_def.h  constant.h  datainterpreter.cpp  datainterpreter.h  datasignal.cpp  datasignal_private.h  debug.cpp  debug_private.h  event.cpp  event_private.h  event_register.h  logging.cpp  logging_private.h  logging_register.h  macro.cpp  macro_private.h  macro_register.h  metawearboard_def.h  metawearboard_macro.h  moduleinfo.cpp  moduleinfo.h  register.h  responseheader.cpp  responseheader.h  settings.cpp  settings_private.h  settings_register.h  timer.cpp  timer_private.h  timer_register.h  version.cpp  version.h
src/metawear/cpp/: accelerometer_bmi160.cpp  accelerometer_mma8452q.cpp  ambientlight_ltr329.cpp  barometer_bmp280.cpp  config.mk  connection.cpp  connection_def.h  constant.h  datainterpreter.cpp  datainterpreter.h  datasignal.cpp  debug.cpp  gyro_bmi160.cpp  haptic.cpp  ibeacon.cpp  led.cpp  metawearboard.cpp  metawearboard_def.h  neopixel.cpp  register.h  responseheader.cpp  responseheader.h  sensor.cpp  switch.cpp
src/metawear/dfu/: metabootboard.h  metabootboard_fwd.h
src/metawear/dfu/cpp/: dfu_operations.cpp  dfu_operations.h  dfu_operations_details.cpp  dfu_operations_details.h  dfu_utility.cpp  dfu_utility.h  file_operations.cpp  file_operations.h  metabootboard.cpp  metabootboard_def.h  miniz.c  miniz.cpp  miniz.h
src/metawear/generator/cpp/: CSharpGenerator.cpp  CSharpGenerator.h  JavaScriptGenerator.cpp  JavaScriptGenerator.h  PythonGenerator.cpp  PythonGenerator.h  SwiftGenerator.cpp  SwiftGenerator.h  common.cpp  common.h
src/metawear/impl/cpp/: datainterpreter.cpp  (+1 more)
src/metawear/peripheral/: haptic.h  ibeacon.h  led.h  neopixel.h  peripheral_common.h
src/metawear/platform/: btle_connection.h  dllmarker.h  memory.h
src/metawear/processor/: accounter.h  accumulator.h  average.h  buffer.h  combiner.h  comparator.h  counter.h  dataprocessor.h  dataprocessor_fwd.h  delta.h  fuser.h  math.h  packer.h  passthrough.h  processor_common.h  pulse.h  pulse_detector.h  rms.h  rss.h  sample.h  sample_delay.h  threshold.h  time.h  time_delay.h
src/metawear/sensor/: accelerometer.h  accelerometer_bmi160.h  accelerometer_bosch.h  accelerometer_mma8452q.h  ambientlight_ltr329.h  barometer_bmp280.h  barometer_bosch.h  colordetector_tcs34725.h  conductance.h  gpio.h  gyro_bmi160.h  gyro_bosch.h  humidity_bme280.h  i2c.h  magnetometer_bmm150.h  multichanneltemperature.h  proximity_tsl2671.h  sensor_common.h  sensor_fusion.h  spi.h  switch.h
test/: barometer_bosch_base.py  cbindings.py  common.py  logdata.py  serializedstate.py  test_accelerometer.py  test_accelerometer_bma255.py  test_accelerometer_bmi160.py  test_accelerometer_bmi270.py  test_accelerometer_bosch.py  test_accelerometer_mma8452q.py  test_ambientlight_ltr329.py  test_anonymous_signal.py  test_barometer_bme280.py  test_barometer_bmp280.py  test_colordetector_tcs34725.py  test_data.py  test_dataprocessor.py  test_debug.py  test_event.py  test_gpio.py  test_gyro_bmi160.py  test_haptic.py  test_humidity_bme280.py  test_i2c.py  test_ibeacon.py  test_led.py  test_logging.py  test_logging_mms.py  test_macro.py  test_magnetometer_bmm150.py  test_metawearboard.py  test_multichanneltemperature.py  test_neopixel.py  test_proximity_tsl2671.py  test_sensor_fusion.py  test_sensor_fusion_config.py  test_settings.py  test_settings_mms.py  test_spi.py  (+29 more)
test/backup/: test_humidity_bme280.py
wrapper/csharp/: AccelerometerBmi160.cs  AccelerometerMma8452q.cs  AmbientLightLtr329.cs  BarometerBmp280.cs  Constants.cs  Core.cs  Debug.cs  Functions.cs  GyroBmi160.cs  Haptic.cs  IBeacon.cs  Led.cs  NeoPixel.cs  Peripheral.cs  Processor.cs  Sensor.cs  Switch.cs  Types.cs
wrapper/python/mbientlab/: metawear.py
(+108 files in other folders)
